# CPPGolf

./: .gitignore  README.md  pyproject.toml
cppgolf/: __init__.py  __main__.py  golf_rename.py  golf_rename_types.py  merge.py  static_dedup.py  strip_comments.py  transforms.py  whitespace.py
